 - Assorted bugfixes and optimisations
 - Add LuaMenu - an unsynced stripped down lua environment that starts before the game is loaded and persists through reload
 - Implement VFS modes - VFS.MOD, VFS.MAP & VFS.BASE now actually work. Added VFS.MENU
 ! base archives now have modtype of 4 and menu archive have modtype of 5
 ! one letter command line flags (e.g. -g instead of --game) are removed

Sim:
 ! Sonar will now detect ships/hovers - this is since los can't raycast through water.
   note that wobble still exists without LoS.

Lua:
 ! Undeprecate {unit,feature}def.modelname and add .modeltype and .modelpath to
   allow reading these without loading the model. Removed def.model.{name,type,path}
   so they aren't used accidentally.
 - Add VFS.AbortDownload(id) - returns whether the download was found&removed from the queue
 - Add Spring.Get{Game,Menu}Name to LuaUnsyncedRead, so LuaMenu and unsynced Lua handles know about each other
 - Add new callins (LuaMenu only):
   ActivateMenu() that is called whenever LuaMenu is on with no game loaded.
   ActivateGame() that is called whenever LuaMenu is on with a game loaded.
   AllowDraw() if it returns false, the next draw call is skipped (only active when a game isn't running)
 - Add Spring.{Set,Get}VideoCapturingMode() - this doesn't actually record the game in any way,
   it just regulates the framerate and interpolations.

UI:
 - Add FPSClampPos config for whether the engine should verify the camera doesn't hit ground/go too far
   this and other FPS camera configs can be changed midgame and will affect the next frame drawn.

-- 103.0 --------------------------------------------------------
General:
 - Fix & Improve performace
 - Add 'allowTake' modoption (default: true) to enable/disable /take (by lamer)
 - Add onlyLocal boolean value to modinfo.lua (default false)
   If true, spring won't listen for incoming connections when running
   this game unless GAME\OnlyLocal is specified in the start script.

Sim: