@@ -74,8 +74,10 @@ class LuaUnsyncedCtrl {
 		static int SetUnitNoMinimap(lua_State* L);
 		static int SetUnitNoSelect(lua_State* L);
 		static int SetUnitLeaveTracks(lua_State* L);
+		static int SetUnitSelectionVolumeData(lua_State* L);
 		static int SetFeatureNoDraw(lua_State* L);
 		static int SetFeatureFade(lua_State* L);
+		static int SetFeatureSelectionVolumeData(lua_State* L);
 
 		static int AddUnitIcon(lua_State* L);
 		static int FreeUnitIcon(lua_State* L);
